--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@astrojs/tailwind": "^5.0.0",
     "@types/react": "^18.2.23",
     "@types/react-dom": "^18.2.8",
+    "@vercel/analytics": "^1.1.1",
     "astro": "^3.1.2",
     "flowbite": "^1.8.1",
     "react": "^18.2.0",
